--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@google-cloud/vision": "^5.3.4",
     "@prisma/client": "^6.11.1",
     "@types/js-cookie": "^3.0.6",
     "@types/nodemailer": "^6.4.17",
