--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "^1.1.2",
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
+    "luxon": "^3.7.2",
     "next": "^14.0.0",
     "nodemailer": "^7.0.4",
     "papaparse": "^5.5.3",
@@ -29,6 +30,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/luxon": "^3.7.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
