--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "admin:summary": "tsx scripts/admin/smoke.ts summary",
+    "admin:catch": "tsx scripts/admin/smoke.ts catch"
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
@@ -35,10 +37,12 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.0.0"
   },
   "keywords": [
