Simplify smoke tests and update configuration
- Simplify smoke.ts to use env vars directly (no dotenv)
- Update package.json scripts to use ./ prefix
- Update .env.local.example with optional filters
- Add note in vercel.json about catch-up cron (disabled)
- Remove dotenv dependency

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,18 +1,14 @@
-﻿# .env.local.example
-# Copy this file to .env.local and fill in your actual values
-# DO NOT commit .env.local to git (it's in .gitignore)
+﻿# Required to hit admin endpoints
+ADMIN_TOKEN=REPLACE_ME
 
-# Admin API token for admin endpoints
-# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-ADMIN_TOKEN=your_admin_token_here
+# Only needed to hit the cron catch route locally
+CRON_SECRET=REPLACE_ME
 
-# Cron secret for cron endpoint authentication (optional but recommended)
-# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-CRON_SECRET=your_cron_secret_here
+# Optional: override base url (defaults to prod)
+# BASE_URL=http://localhost:3000
 
-# Shared ingest secret for internal SMT ingest endpoint
-# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-SHARED_INGEST_SECRET=your_shared_ingest_secret_here
-
-# Base URL for smoke tests (defaults to https://intelliwatt.com)
-# NEXT_PUBLIC_APP_URL=https://intelliwatt.com
+# Optional filters for summary runs
+# ESIID=1044...AAA
+# METER=M1
+# DATE_START=2025-10-31T00:00:00Z
+# DATE_END=2025-11-04T00:00:00Z
