--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "admin:summary": "tsx scripts/admin/smoke.ts summary",
-    "admin:catch": "tsx scripts/admin/smoke.ts catch"
+    "admin:summary": "tsx ./scripts/admin/smoke.ts summary",
+    "admin:catch": "tsx ./scripts/admin/smoke.ts catch"
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
@@ -37,7 +37,6 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
-    "dotenv": "^16.4.5",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.4.0",
