--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "outputDirectory": ".next",
+  "//": "Uncomment the cron below to enable hourly sweep in production.",
   "crons": [
     {
       "path": "/api/admin/rates/refresh",
