--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "admin:summary": "tsx ./scripts/admin/smoke.ts summary",
-    "admin:catch": "tsx ./scripts/admin/smoke.ts catch"
+    "admin:catch": "tsx ./scripts/admin/smoke.ts catch",
+    "address:esiid": "tsx ./scripts/admin/resolve.ts address",
+    "esiid:meter": "tsx ./scripts/admin/resolve.ts esiid"
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
