Add comprehensive connection test script for SMT and WattBuy
- Tests SMT ingest-normalize endpoint and database writes
- Tests SMT daily summary endpoint
- Tests WattBuy address â†’ ESIID resolution
- Tests WattBuy ESIID â†’ Meter resolution
- Tests WattBuy offers sync and database writes
- Verifies all data is correctly written to database tables
- Provides detailed test results and summary

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "admin:summary": "tsx ./scripts/admin/smoke.ts summary",
     "admin:catch": "tsx ./scripts/admin/smoke.ts catch",
     "address:esiid": "tsx ./scripts/admin/resolve.ts address",
-    "esiid:meter": "tsx ./scripts/admin/resolve.ts esiid"
+    "esiid:meter": "tsx ./scripts/admin/resolve.ts esiid",
+    "test:connections": "tsx ./scripts/admin/test-connections.ts"
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
