WIP: bulk edit from Cursor (do NOT deploy)

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.16",
     "cheerio": "^1.1.2",
+    "dotenv": "^16.4.5",
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
     "luxon": "^3.7.2",
@@ -49,17 +50,18 @@
     "papaparse": "^5.5.3",
     "pdf-parse": "^2.1.6",
     "pdfjs-dist": "^5.4.149",
-    "prisma": "^6.11.1",
-    "dotenv": "^16.4.5",
     "pg": "^8.11.5",
+    "prisma": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/luxon": "^3.7.1",
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
