Deprecate WattBuy ESIID lookups; convert offers to address/zip only
- Gate WattBuy ESIID admin routes with wattbuyEsiidDisabled flag (returns 410 Gone)
- Convert /api/offers to address/zip only (remove ESIID support)
- Add /api/admin/wattbuy/probe-offers endpoint for testing
- Update wattbuy/probe to require address only
- Add WATTBUY_ESIID_DISABLED env var (defaults to true)
- Update client library to address/zip-only offers API
- Add smoke test scripts for WattBuy offers
- Update documentation with ESIID lineage and compliance notes
- Add ERCOT admin helpers and daily-summary endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -5,17 +5,6 @@
   "installCommand": "npm install",
   "outputDirectory": ".next",
   "crons": [
-    {
-      "path": "/api/admin/rates/refresh",
-      "schedule": "0 2 * * *"
-    },
-    {
-      "path": "/api/rates/efl-refresh",
-      "schedule": "0 3 * * *"
-    },
-    {
-      "path": "/api/admin/cron/normalize-smt",
-      "schedule": "*/5 * * * *"
-    }
+    { "path": "/api/admin/ercot/cron", "schedule": "0 9 * * *" }
   ]
 }
