Replace offers endpoints with current WattBuy flow in test scripts
- Create api_test_prod.mjs: Node.js smoke test for production endpoints
- Update test-connections.ts: replace offers sync with electricity-probe and retail-rates tests
- Add test:prod npm script for running api_test_prod.mjs
- Align all test scripts with current WattBuy setup (no offers)

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "esiid:meter": "tsx ./scripts/admin/resolve.ts esiid",
     "esiid:resolve-save": "tsx ./scripts/admin/esiid-save.ts resolve-save",
     "esiid:save": "tsx ./scripts/admin/esiid-save.ts save",
-    "test:connections": "tsx ./scripts/admin/test-connections.ts"
+    "test:connections": "tsx ./scripts/admin/test-connections.ts",
+    "test:prod": "node scripts/admin/api_test_prod.mjs"
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
