--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,8 @@
   "installCommand": "npm install",
   "outputDirectory": ".next",
   "crons": [
-    { "path": "/api/admin/ercot/cron", "schedule": "0 9 * * *" }
+    { "path": "/api/admin/ercot/cron", "schedule": "15 9 * * *" },
+    { "path": "/api/admin/ercot/cron", "schedule": "30 10 * * 3" },
+    { "path": "/api/admin/ercot/cron", "schedule": "0 15 * * *" }
   ]
 }
