Implement ERCOT daily pull system with real data
- Update Prisma schema: simplified ErcotIngest and ErcotEsiidIndex models
- Create lib/ercot/types.ts: IngestResult type definition
- Create lib/ercot/resolve.ts: JSDOM-based page scraping to find latest TDSP files
- Create lib/ercot/fetch.ts: Download files to /tmp with SHA256 hashing
- Rewrite lib/ercot/ingest.ts: heuristic parser for pipe/csv/tsv, ESIID extraction, TDSP detection, batch upserts
- Update cron route: resolve latest from page, fetch, ingest with idempotence
- Create fetch-latest route: manual fetch by explicit URL
- Update ingests route: simplified Prisma query
- Update debug/last route: simplified with status/tdsp filters
- Create debug/url-sanity route: test page URL resolution
- Create admin scripts: ercot_fetch_latest, ercot_resolve_fetch, ercot_load_file
- Add npm scripts: ercot:migrate:dev, ercot:migrate:deploy, ercot:fetch:latest, ercot:load:file, ercot:resolve:fetch
- Update vercel.json: single daily cron at 9 AM
- Create docs/DEPLOY_ERCOT.md: deployment and verification guide
- Update docs/QUICK_START.md: add ERCOT quick commands section
- Add jsdom dependency for HTML parsing

--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "esiid:resolve-save": "tsx ./scripts/admin/esiid-save.ts resolve-save",
     "esiid:save": "tsx ./scripts/admin/esiid-save.ts save",
     "test:connections": "tsx ./scripts/admin/test-connections.ts",
-    "test:prod": "node scripts/admin/api_test_prod.mjs"
+    "test:prod": "node scripts/admin/api_test_prod.mjs",
+    "ercot:migrate:dev": "prisma migrate dev --name ercot_models",
+    "ercot:migrate:deploy": "prisma migrate deploy",
+    "ercot:fetch:latest": "node scripts/admin/ercot_fetch_latest.mjs",
+    "ercot:load:file": "node scripts/admin/ercot_load_file.mjs",
+    "ercot:resolve:fetch": "node scripts/admin/ercot_resolve_fetch.mjs"
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
@@ -27,6 +32,7 @@
     "cheerio": "^1.1.2",
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
+    "jsdom": "^24.0.0",
     "luxon": "^3.7.2",
     "next": "^14.0.0",
     "nodemailer": "^7.0.4",
@@ -38,6 +44,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.6",
     "@types/luxon": "^3.7.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
