--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ercot:resolve:fetch": "node scripts/admin/ercot_resolve_fetch.mjs"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.673.0",
     "@google-cloud/vision": "^5.3.4",
     "@prisma/client": "^6.11.1",
     "@types/js-cookie": "^3.0.6",
