--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "csv-writer": "^1.6.0",
+    "formidable": "^3.5.3",
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
     "jsdom": "^24.0.0",
     "luxon": "^3.7.2",
     "next": "^14.0.0",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.4",
     "papaparse": "^5.5.3",
     "pdf-parse": "^2.1.6",
@@ -50,6 +53,8 @@
   "devDependencies": {
     "@types/jsdom": "^21.1.6",
     "@types/luxon": "^3.7.1",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
