--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "ercot:fetch:latest": "node scripts/admin/ercot_fetch_latest.mjs",
     "ercot:load:file": "node scripts/admin/ercot_load_file.mjs",
     "ercot:resolve:fetch": "node scripts/admin/ercot_resolve_fetch.mjs",
-    "puct:fetch-reps": "node scripts/admin/fetch-puct-reps.mjs"
+    "puct:fetch-reps": "node scripts/admin/fetch-puct-reps.mjs",
+    "db:apply-smt-billing": "tsx scripts/db/applySmtBillingReadMigration.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.673.0",
@@ -46,6 +47,7 @@
     "papaparse": "^5.5.3",
     "pdf-parse": "^2.1.6",
     "pdfjs-dist": "^5.4.149",
+    "pg": "^8.11.0",
     "prisma": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
