--- a/package.json
+++ b/package.json
@@ -34,15 +34,16 @@
     "@types/papaparse": "^5.3.16",
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
+    "csv-parse": "^5.6.0",
     "csv-writer": "^1.6.0",
+    "express": "^4.19.2",
     "formidable": "^3.5.3",
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
     "jsdom": "^24.0.0",
     "luxon": "^3.7.2",
-    "next": "^14.0.0",
-    "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "next": "^14.0.0",
     "nodemailer": "^7.0.4",
     "papaparse": "^5.5.3",
     "pdf-parse": "^2.1.6",
@@ -53,9 +54,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jsdom": "^21.1.6",
     "@types/luxon": "^3.7.1",
-    "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.11.0",
