--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "csv-parse": "^5.6.0",
     "csv-writer": "^1.6.0",
     "express": "^4.19.2",
+    "fast-xml-parser": "^5.2.5",
     "formidable": "^3.5.3",
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
