--- a/deploy/smt/smt-ingest.service
+++ b/deploy/smt/smt-ingest.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=IntelliWatt SMT ingest (SFTP -> inline POST)
+Description=IntelliWatt SMT ingest (SFTP fetch -> droplet upload server POST)
 Wants=network-online.target
 After=network-online.target
 
@@ -10,8 +10,11 @@ Group=deploy
 EnvironmentFile=/etc/default/intelliwatt-smt
 WorkingDirectory=/home/deploy/apps/intelliwatt
 ExecStart=/bin/bash /home/deploy/apps/intelliwatt/deploy/smt/fetch_and_post.sh
-Restart=on-failure
-RestartSec=10
+
+# Auto-restart on failure to ensure SMT ingest always retries
+# This service runs on demand and must always be available
+Restart=always
+RestartSec=30
 
 [Install]
 WantedBy=multi-user.target
