--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "pg": "^8.11.0",
     "prisma": "^6.11.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
