--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "prisma": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
