--- a/deploy/smt/smt-ingest.service
+++ b/deploy/smt/smt-ingest.service
@@ -10,6 +10,7 @@ Group=deploy
 EnvironmentFile=/etc/default/intelliwatt-smt
 WorkingDirectory=/home/deploy/apps/intelliwatt
 ExecStart=/bin/bash /home/deploy/apps/intelliwatt/deploy/smt/fetch_and_post.sh
+Nice=10
 
 # Auto-restart on failure to ensure SMT ingest always retries
 # This service runs on demand and must always be available
