--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsdom": "^24.0.0",
     "luxon": "^3.7.2",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.77.0",
     "next": "^14.0.0",
     "nodemailer": "^7.0.4",
     "papaparse": "^5.5.3",
