Add droplet EFL pdftotext apply/post-pull scripts and docs

--- a/deploy/droplet/systemd/efl-pdftotext.override.conf
+++ b/deploy/droplet/systemd/efl-pdftotext.override.conf
@@ -1,3 +1,4 @@
 [Service]
-EnvironmentFile=
+# Load EFL-specific env (token, optional port) without touching the shared
+# /home/deploy/.intelliwatt.env used by other services.
 EnvironmentFile=/home/deploy/.efl-pdftotext.env
