TDSP: add tariff ingest run logging and admin ingest runner

--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,7 @@
     }
   },
   "crons": [
-    { "path": "/api/admin/ercot/cron", "schedule": "0 12 * * *" }
+    { "path": "/api/admin/ercot/cron", "schedule": "0 12 * * *" },
+    { "path": "/api/admin/tdsp/ingest", "schedule": "15 9 * * *" }
   ]
 }
