--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,14 @@
   "root": true,
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
+    "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@next/next/no-assign-module-variable": "off",
+    "@next/next/no-img-element": "off",
+    "react/no-unescaped-entities": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "no-var": "off",
     "prefer-const": "off"
   }
 }
