--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "esiid:save": "tsx ./scripts/admin/esiid-save.ts save",
     "test:connections": "tsx ./scripts/admin/test-connections.ts",
     "test:prod": "node scripts/admin/api_test_prod.mjs",
+    "admin:rateplan:report": "node scripts/admin/report-rateplan-calc.mjs",
+    "admin:rateplan:backfill": "node scripts/admin/backfill-rateplan-calc.mjs",
     "house:backfill-esiids": "tsx ./scripts/admin/backfill-house-esiids.ts",
     "ercot:migrate:dev": "prisma migrate dev --name ercot_models",
     "ercot:migrate:deploy": "prisma migrate deploy",
