--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "admin:rateplan:backfill": "node scripts/admin/backfill-rateplan-calc.mjs",
     "admin:rateplan:missing-buckets": "node scripts/admin/list-rateplan-missing-buckets.mjs",
     "admin:rateplan:rederive": "node scripts/admin/rederive-rateplan-calc.mjs",
+    "admin:rateplan:diagnose-missing-templates": "node scripts/admin/diagnose-missing-templates.mjs",
     "house:backfill-esiids": "tsx ./scripts/admin/backfill-house-esiids.ts",
     "ercot:migrate:dev": "prisma migrate dev --name ercot_models",
     "ercot:migrate:deploy": "prisma migrate deploy",
