--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "admin:rateplan:rederive": "node scripts/admin/rederive-rateplan-calc.mjs",
     "admin:rateplan:diagnose-missing-templates": "node scripts/admin/diagnose-missing-templates.mjs",
     "admin:rateplan:rewire-maps": "node scripts/admin/rewire-offer-rateplan-map.mjs",
+    "admin:rateplan:link-offers": "node scripts/admin/link-offers-to-templates.mjs",
     "house:backfill-esiids": "tsx ./scripts/admin/backfill-house-esiids.ts",
     "ercot:migrate:dev": "prisma migrate dev --name ercot_models",
     "ercot:migrate:deploy": "prisma migrate deploy",
