--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "admin:rateplan:rewire-maps": "node scripts/admin/rewire-offer-rateplan-map.mjs",
     "admin:rateplan:link-offers": "node scripts/admin/link-offers-to-templates.mjs",
     "admin:rateplan:offer-template-coverage": "node scripts/admin/report-offer-template-coverage.mjs",
+    "admin:rateengine:inventory": "node scripts/admin/rate-engine-inventory.mjs",
     "house:backfill-esiids": "tsx ./scripts/admin/backfill-house-esiids.ts",
     "ercot:migrate:dev": "prisma migrate dev --name ercot_models",
     "ercot:migrate:deploy": "prisma migrate deploy",
