--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "admin:rateplan:link-offers": "node scripts/admin/link-offers-to-templates.mjs",
     "admin:rateplan:offer-template-coverage": "node scripts/admin/report-offer-template-coverage.mjs",
     "admin:rateengine:inventory": "node scripts/admin/rate-engine-inventory.mjs",
+    "admin:usage:buckets:audit": "tsx scripts/admin/usage-bucket-audit.ts",
     "house:backfill-esiids": "tsx ./scripts/admin/backfill-house-esiids.ts",
     "ercot:migrate:dev": "prisma migrate dev --name ercot_models",
     "ercot:migrate:deploy": "prisma migrate deploy",
