Admin: backfill canonical monthly usage buckets from intervals

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "admin:rateplan:offer-template-coverage": "node scripts/admin/report-offer-template-coverage.mjs",
     "admin:rateengine:inventory": "node scripts/admin/rate-engine-inventory.mjs",
     "admin:usage:buckets:audit": "tsx scripts/admin/usage-bucket-audit.ts",
+    "admin:usage:buckets:backfill": "tsx scripts/admin/usage-bucket-backfill.ts",
     "house:backfill-esiids": "tsx ./scripts/admin/backfill-house-esiids.ts",
     "ercot:migrate:dev": "prisma migrate dev --name ercot_models",
     "ercot:migrate:deploy": "prisma migrate deploy",
