EFL pdftotext: OCR fallback for scanned PDFs + longer timeouts

--- a/deploy/droplet/env/.efl-pdftotext.env.example
+++ b/deploy/droplet/env/.efl-pdftotext.env.example
@@ -11,3 +11,8 @@ EFL_PDFTEXT_TOKEN=change-me
 # Optional: override port (must match nginx proxy_pass target and systemd unit).
 EFL_PDFTEXT_PORT=8095
 
+# Optional: OCR fallback tuning for scanned PDFs (requires pdftoppm + tesseract installed).
+# Default: enabled automatically when tools are present.
+EFL_PDFTEXT_OCR_MAX_PAGES=10
+EFL_PDFTEXT_OCR_DPI=200
+EFL_PDFTEXT_OCR_LANG=eng
